[package]
name = "mscalc"
version = "0.1.0"
authors = ["Ryan Avella"]
edition = "2021"
description = "Calculate characteristic impedance from trace width, substrate thickness, and dielectric constant."
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.89"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'HtmlInputElement',
  'Window',
]
