[package]
name = "mscalc"
version = "0.1.0"
authors = ["Ryan Avella"]
edition = "2021"
description = "Calculate characteristic impedance from trace width, substrate thickness, and dielectric constant."
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.20"
wasm-bindgen = "0.2.91"

[dependencies.gloo]
version =  "0.11.0"
features = [
  'events',
  'utils',
]

[dependencies.web-sys]
version = "0.3.68"
