[package]
name = "pwgen"
version = "0.1.0"
authors = ["Ryan Avella"]
edition = "2021"
description = "Generate secure random passphrases."
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
getrandom = { version = "0.2.12", features = ["js"] }
log = "0.4.20"
rand = { version = "0.8.5", features = ["getrandom"] }
wasm-bindgen = "0.2.91"

[dependencies.gloo]
version =  "0.11.0"
features = [
  'events',
  'utils',
]

[dependencies.web-sys]
version = "0.3.68"
